Imported Upstream version 2.4